# .dot-files

./: .cobra.yaml  .common-shrc  .common-vimrc  .common-zshrc  .commonrc  .config  .emacs  .env.example  .git-commit-template  .gitconfig  .gitignore  .ideavimrc  .spacemacs  .vimrc  .zshrc  0001-fix-Upgrade-for-python-3.11.patch  Dockerfile  LICENSE  Microsoft.PowerShell_profile.ps1  README.md  common-shrc  common-zshrc  dofu  dofu.sh  env.sh  go.mod  go.sum  ideavimrc  init.el  main.go  pyproject.toml  setup-env-config.ps  setup-env-config.sh  setup-env-install-dist-tools.sh  setup-env-install-modern-tools.sh  setup-env-install.ps  setup-env-install.sh  setup-env.sh  setup.ps  setup.sh  (+1 more)
.config/: starship-docker.toml  starship-kali.toml  starship-linux.toml  starship-mac.toml  starship.toml
.config/git/: commit-template  config
.config/nvim/: filetype.vim  init.lua
.config/tmux/: tmux.conf.local
cmd/: root.go  sync.go
internal/dofu/: sync.go
scripts/: git-fzf.sh
scripts/awk/: bat-range-arg-from-rg.awk
src/dofu/: __init__.py  __main__.py  env.py  equipment.py  gum.py  inspect.py  logging.py  module.py  options.py  package_manager.py  platform.py  requirement.py  requirements.py  shutils.py  specification.py  undoable_command.py  utils.py  version_control.py
tests/: conftest.py  dummies.py  test_env.py  test_requirement.py  test_shutils.py  test_version_control.py
tests/test_dry_run/: conftest.py  dummies.py  test_dry_run.py  test_equipment.py  (+2 more)
xdg-config/: Microsoft.PowerShell_profile.ps1  common-shrc  common-zshrc  starship.toml  vimrc  zshrc
(+97 files in other folders)
